change: methods to add dishes to list    bug fix autotag    refinements - adding robustness for listcollector.